Added Hibernate entity classes which reflect database structure.